--- a/app/src/main/res/layout/dialog_options.xml
+++ b/app/src/main/res/layout/dialog_options.xml
@@ -4,27 +4,103 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center">
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:background="@color/gris30"
+    android:layout_margin="20dp">
 
-    <!-- EditText para la marca de la tarjeta -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Características"
+        android:padding="15dp"
+        android:layout_gravity="start"
+        android:layout_marginLeft="5dp"
+        android:textColor="@color/verde100"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        />
+
     <EditText
+        android:textCursorDrawable="@null"
         android:id="@+id/etMarca"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Marca"
         android:padding="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/gris50"
+        android:textColorHint="@color/gris50"
+        android:textColor="@color/gris50"
+        />
 
-    <!-- EditText para el modelo de la tarjeta -->
     <EditText
+        android:textCursorDrawable="@null"
         android:id="@+id/etModelo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Modelo"
         android:padding="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/gris50"
+        android:textColor="@color/gris50"
+        android:textColorHint="@color/gris50"
+        />
 
-    <!-- ImageView para mostrar la imagen actual de la tarjeta -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fondo de la tarjeta"
+        android:layout_gravity="start"
+        android:layout_marginLeft="5dp"
+        android:textColor="@color/verde100"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:padding="15dp"/>
+
+    <RadioGroup
+        android:id="@+id/backgroundSelector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:backgroundTint="@color/negro100">
+
+        <RadioButton
+            android:id="@+id/rbRed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rojo"
+            android:textColor="@color/negro100"
+            android:backgroundTint="@color/verde50"
+            android:buttonTint="@color/verde100"/>
+
+        <RadioButton
+            android:id="@+id/rbBlue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Azul"
+            android:textColor="@color/negro100"
+            android:backgroundTint="@color/verde50"
+            android:buttonTint="@color/verde100"/>
+
+        <RadioButton
+            android:id="@+id/rbGreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Verde"
+            android:textColor="@color/negro100"
+            android:backgroundTint="@color/verde50"
+            android:buttonTint="@color/verde100"/>
+
+        <RadioButton
+            android:id="@+id/rbGris"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gris"
+            android:textColor="@color/negro100"
+            android:backgroundTint="@color/verde50"/>
+    </RadioGroup>
+
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="300dp"
@@ -34,25 +110,28 @@
         android:contentDescription="Imagen de la tarjeta"
         android:scaleType="centerCrop"/>
 
-    <!-- Botón para cambiar la imagen -->
     <Button
         android:id="@+id/btnChangeImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cambiar imagen"
-        android:backgroundTint="@color/verde30"
+        android:backgroundTint="@color/verde100"
         android:textColor="@android:color/white"
         android:padding="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        />
 
-    <!-- Botón para guardar los cambios -->
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Guardar"
-        android:backgroundTint="@color/verde30"
+        android:backgroundTint="@color/verde100"
         android:textColor="@android:color/white"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
 </LinearLayout>
