--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/bgCard"
             android:layout_width="500dp"
             android:layout_height="160dp"
             android:layout_centerInParent="true"
