--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,18 +2,32 @@
 <resources>
     <color name="verde100">#FF589E49</color>
     <color name="blanco">#FFFFFFFF</color>
-    <color name="negro">#FF000000</color>
+    <color name="negro100">#FF000000</color>
+    <color name="negro10">#c2c2c2</color>
     <color name="verde60">#1f7f15</color>
+    <color name="verde55">#48793c</color>
     <color name="verde50">#3c9a2f</color>
     <color name="verde40">#58b448</color>
+    <color name="verde35">#769b6a</color>
     <color name="verde30">#75cf62</color>
+    <color name="verde25">#769b6a</color>
     <color name="verde20">#92ea7c</color>
     <color name="verde10">#E4EEE2</color>
-    <color name="negro10">#c2c2c2</color>
     <color name="rojo10">#e64529</color>
     <color name="rojo20">#c4341f</color>
     <color name="rojo30">#a12215</color>
     <color name="rojo40">#7f110a</color>
     <color name="rojo50">#5c0000</color>
-
+    <color name="gris10">#c4d0d9</color>
+    <color name="gris20">#d1d9dc</color>
+    <color name="gris30">#dde2e3</color>
+    <color name="gris40">#9d9c9a</color>
+    <color name="gris45">#acb9a5</color>
+    <color name="gris50">#72747a</color>
+    <color name="gris55">#8e9b87</color>
+    <color name="gris60">#b6b9a3</color>
+    <color name="gris65">#7f8b79</color>
+    <color name="gris68">#707c6a</color>
+    <color name="gris70">#a69e70</color>
+    <color name="gris80">#766e3f</color>
 </resources>
