--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="blanco">#FFFFFFFF</color>
     <color name="negro100">#FF000000</color>
     <color name="negro10">#c2c2c2</color>
+    <color name="verde70">#315330</color>
     <color name="verde60">#1f7f15</color>
     <color name="verde55">#48793c</color>
     <color name="verde50">#3c9a2f</color>
