--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Cardview">
+    tools:context=".ui.views.Cardview">
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
@@ -29,7 +29,7 @@
                 android:background="@color/verde100"
                 android:title="Mis Tarjetas"
                 android:titleTextColor="@android:color/white"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                />
 
             <!-- Contenedor de los Fragments -->
             <FrameLayout
@@ -51,6 +51,8 @@
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:itemIconTint="@color/blanco"
+        app:itemTextColor="@color/blanco"
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
