--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -20,7 +20,7 @@
         android:id="@+id/navUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Usuario"
+        android:text="Pablo"
         android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_marginTop="8dp"
