--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="verde40">#58b448</color>
     <color name="verde35">#769b6a</color>
     <color name="verde30">#75cf62</color>
+    <color name="alcazar">#00573a</color>
     <color name="verde25">#769b6a</color>
     <color name="verde20">#92ea7c</color>
     <color name="verde10">#E4EEE2</color>
