--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -14,14 +14,12 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <!-- Contenido Principal -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/verde10">
 
-            <!-- Toolbar -->
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -31,7 +29,6 @@
                 android:titleTextColor="@android:color/white"
                 />
 
-            <!-- Contenedor de los Fragments -->
             <FrameLayout
                 android:id="@+id/fragmentContainer"
                 android:layout_width="match_parent"
@@ -40,7 +37,6 @@
                 android:background="@color/blanco"/>
         </LinearLayout>
 
-        <!-- Navigation Drawer -->
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationView"
             android:layout_width="wrap_content"
@@ -51,11 +47,12 @@
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:labelVisibilityMode="unlabeled"
         app:itemIconTint="@color/blanco"
         app:itemTextColor="@color/blanco"
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         app:menu="@menu/menu_abajo"
         android:background="@color/verde70"/>
 </LinearLayout>
