--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +8,7 @@
     android:background="@drawable/bg_login">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -20,11 +22,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="470dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/welcomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bienvenido"
@@ -33,35 +36,33 @@
                 android:textStyle="bold"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginBottom="40dp"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="40dp"/>
 
             <EditText
-                android:textCursorDrawable="@null"
-                android:id="@+id/email"
+                android:id="@+id/usernameEditText"
                 android:layout_width="220dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:hint="Email"
-                android:textColorHint="@color/negro10"
+                android:hint="Username"
                 android:inputType="textEmailAddress"
+                android:textColor="@color/negro100"
+                android:textColorHint="@color/negro10"
                 android:padding="8dp"
-                android:backgroundTint="@color/negro10"
-                android:textColor="@color/negro100"/>
+                android:backgroundTint="@color/negro10" />
 
             <EditText
-                android:textCursorDrawable="@null"
-                android:id="@+id/pass"
+                android:id="@+id/passwordEditText"
                 android:layout_width="220dp"
-                android:layout_gravity="center"
                 android:layout_height="50dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:hint="Contraseña"
-                android:textColorHint="@color/negro10"
                 android:inputType="textPassword"
+                android:textColor="@color/negro100"
+                android:textColorHint="@color/negro10"
                 android:padding="8dp"
-                android:backgroundTint="@color/negro10"
-                android:textColor="@color/negro100"/>
+                android:backgroundTint="@color/negro10" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -69,8 +70,7 @@
                 android:orientation="horizontal"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="10dp"
-                >
+                android:layout_marginBottom="10dp">
 
                 <Button
                     android:id="@+id/loginButton"
@@ -78,12 +78,9 @@
                     android:layout_height="wrap_content"
                     android:text="Log in"
                     android:padding="15dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="0dp"
+                    android:layout_marginEnd="5dp"
                     android:backgroundTint="@color/verde100"
-                android:textColor="@android:color/white" />
+                    android:textColor="@android:color/white" />
 
                 <Button
                     android:id="@+id/registerButton"
@@ -91,9 +88,6 @@
                     android:layout_height="wrap_content"
                     android:text="Register"
                     android:padding="15dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="0dp"
                     android:backgroundTint="@color/verde70"
                     android:textColor="@android:color/white" />
 
@@ -106,13 +100,17 @@
                 android:text="Reset Password"
                 android:padding="15dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/gris50"
                 android:textColor="@android:color/white" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                style="?android:attr/progressBarStyleLarge" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
