--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="20dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="8dp"
         app:cardBackgroundColor="@color/blanco"
@@ -41,11 +41,11 @@
 
             <EditText
                 android:id="@+id/usernameEditText"
-                android:layout_width="220dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_gravity="center"
+                android:layout_marginHorizontal="30dp"
                 android:hint="Username"
-                android:inputType="textEmailAddress"
+                android:inputType="text"
                 android:textColor="@color/negro100"
                 android:textColorHint="@color/negro10"
                 android:padding="8dp"
@@ -53,9 +53,9 @@
 
             <EditText
                 android:id="@+id/passwordEditText"
-                android:layout_width="220dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_gravity="center"
+                android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="8dp"
                 android:hint="Contraseña"
                 android:inputType="textPassword"
@@ -95,8 +95,9 @@
 
             <Button
                 android:id="@+id/resetPass"
-                android:layout_width="220dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
                 android:text="Reset Password"
                 android:padding="15dp"
                 android:layout_gravity="center"
@@ -105,11 +106,11 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:visibility="gone"
                 android:layout_gravity="center"
-                style="?android:attr/progressBarStyleLarge" />
+                 />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
