--- a/app/src/main/res/layout/dialog_card.xml
+++ b/app/src/main/res/layout/dialog_card.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Características"
+        android:text="Moto Nueva"
         android:padding="15dp"
         android:layout_gravity="start"
         android:layout_marginLeft="5dp"
@@ -24,11 +24,10 @@
         android:textStyle="bold" />
 
     <EditText
-        android:textCursorDrawable="@null"
-        android:id="@+id/etMarca"
+        android:id="@+id/etName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Marca"
+        android:hint="Nombre"
         android:padding="10dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/gris50"
@@ -36,24 +35,33 @@
         android:textColor="@color/gris50" />
 
     <EditText
-        android:textCursorDrawable="@null"
-        android:id="@+id/etModelo"
+        android:id="@+id/etDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Modelo"
+        android:hint="Descripción"
         android:padding="10dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/gris50"
         android:textColorHint="@color/gris50"
         android:textColor="@color/gris50" />
 
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+    <EditText
+        android:id="@+id/etAverageRating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Puntuación (0-5)"
+        android:inputType="numberDecimal"
+        android:padding="10dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/img_1"
-        android:scaleType="centerCrop" />
+        android:backgroundTint="@color/gris50"
+        android:textColorHint="@color/gris50"
+        android:textColor="@color/gris50" />
+
+    <CheckBox
+        android:id="@+id/cbHasImprovements"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tiene mejoras" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,14 +71,6 @@
         android:layout_marginTop="10dp">
 
         <ImageButton
-            android:id="@+id/btnChangeImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/camara3"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            />
-
-        <ImageButton
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,14 +78,6 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginLeft="8dp"
             />
-
-        <ImageButton
-            android:id="@+id/btnSelectFromGallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/galeria3"
-            android:background="?attr/selectableItemBackgroundBorderless"
-           />
     </LinearLayout>
 
 </LinearLayout>
